@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="//field[@name='export_fields']" position="after">
+        <field name="groups" colspan="4"/>
+        <field name="write_groups" colspan="4"/>
+    </xpath>
+</data>
